--- a/index.html
+++ b/index.html
@@ -400,12 +400,12 @@
                 question: "What draws you to creative work beyond artistic expression?",
                 options: [
                     { id: "helping_healing", text: "Helping & Healing Others", desc: "Using creativity for therapy, education, community building" },
-                    { id: "preserving_heritage", text: "Connecting Past & Future", desc: "Being a bridge between history and contemporary culture" },
-                    { id: "technology_innovation", text: "Technology & Innovation", desc: "Cutting-edge digital tools, experimental techniques" },
-                    { id: "business_strategy", text: "Creative Industries & Impact", desc: "Where creativity meets commerce, shaping cultural markets" },
-                    { id: "storytelling_narrative", text: "Storytelling & Narrative", desc: "Creating compelling stories across different mediums" },
-                    { id: "technical_mastery", text: "Mastery & Precision", desc: "Perfecting specialized techniques, expert craftsmanship" },
-                    { id: "social_impact", text: "Social Impact & Community", desc: "Art for social change, community engagement" }
+                    { id: "preserving_heritage", text: "Connecting Past & Future", desc: "Being a bridge between history and contemporary culture, keeping stories alive" },
+                    { id: "technology_innovation", text: "Technology & Innovation", desc: "Cutting-edge digital tools, experimental techniques, future possibilities" },
+                    { id: "business_strategy", text: "Creative Industries & Impact", desc: "Where creativity meets commerce, shaping cultural markets and trends" },
+                    { id: "storytelling_narrative", text: "Storytelling & Narrative", desc: "Creating compelling stories across different mediums and platforms" },
+                    { id: "technical_mastery", text: "Mastery & Precision", desc: "Perfecting specialized techniques, becoming an expert craftsperson" },
+                    { id: "social_impact", text: "Social Impact & Community", desc: "Art for social change, community engagement, making the world better" }
                 ]
             },
             {
