--- a/index.html
+++ b/index.html
@@ -310,13 +310,12 @@
             {
                 question: "What draws you to creative work beyond artistic expression?",
                 options: [
-                    { id: "helping_healing", text: "Helping & Healing Others", desc: "Using creativity for therapy, education, community building" },
+                    { id: "helping_healing", text: "Social Impact & Community", desc: "Art for social change, community engagement, therapy, education, making the world better" },
                     { id: "preserving_heritage", text: "Connecting Past & Future", desc: "Being a bridge between history and contemporary culture, keeping stories alive" },
                     { id: "technology_innovation", text: "Technology & Innovation", desc: "Cutting-edge digital tools, experimental techniques, future possibilities" },
                     { id: "business_strategy", text: "Creative Industries & Impact", desc: "Where creativity meets commerce, shaping cultural markets and trends" },
                     { id: "storytelling_narrative", text: "Storytelling & Narrative", desc: "Creating compelling stories across different mediums and platforms" },
-                    { id: "technical_mastery", text: "Mastery & Precision", desc: "Perfecting specialized techniques, becoming an expert craftsperson" },
-                    { id: "social_impact", text: "Social Impact & Community", desc: "Art for social change, community engagement, making the world better" }
+                    { id: "technical_mastery", text: "Mastery & Precision", desc: "Perfecting specialized techniques, becoming an expert craftsperson" }
                 ]
             },
             {
@@ -359,12 +358,10 @@
                 question: "Which specialized area intrigues you most?",
                 options: [
                     { id: "working_with_animals", text: "Working with Animals", desc: "Training, coordinating animals in creative contexts" },
-                    { id: "live_creation", text: "Live Artistic Creation", desc: "Creating art in real-time while audiences watch" },
-                    { id: "preservation_restoration", text: "Preservation & Restoration", desc: "Saving artworks and cultural artifacts" },
-                    { id: "documentation_recording", text: "Documentation & Recording", desc: "Capturing important events through creative means" },
+                    { id: "live_creation", text: "Live & Interactive Creation", desc: "Creating art in real-time while audiences watch or participate in shaping the story" },
+                    { id: "preservation_restoration", text: "Preservation & Documentation", desc: "Saving artworks and cultural artifacts, capturing important events through creative means" },
                     { id: "healing_through_creativity", text: "Healing Through Creativity", desc: "Using artistic practices for therapy" },
-                    { id: "interactive_storytelling", text: "Interactive Storytelling", desc: "Creating narratives where audiences shape the story" },
-                    { id: "niche_expertise", text: "Niche Cultural Expertise", desc: "Becoming a specialist in unique cultural areas" },
+                    { id: "cultural_expertise", text: "Cultural Expertise", desc: "Becoming a specialist in unique cultural areas" },
                     { id: "technical_craftsmanship", text: "Technical Craftsmanship", desc: "Mastering behind-the-scenes technical skills" }
                 ]
             },
