--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 
         body {
             font-family: 'Georgia', 'Times New Roman', serif;
+            font-variant-numeric: normal;
             background: #f4f1eb;
             min-height: 100vh;
             padding: 30px 20px;
